# VIO-SLAM

./: README.md
week1/: CMakeLists.txt  question_2.cpp
week2/: README.md
week2/kalibr_allan/matlab/: SCRIPT_allan_matparallel.m  SCRIPT_process_results.m
week2/src/bagconvert/cmake/: FindMatlab.cmake
week2/src/code_utils/: CMakeLists.txt
week2/src/imu_utils/data/: data_imutest_acc_x.txt  data_imutest_acc_y.txt  data_imutest_acc_z.txt  data_imutest_gyr_x.txt  data_imutest_gyr_y.txt  data_imutest_gyr_z.txt  data_imutest_sim_acc_t.txt  data_imutest_sim_acc_x.txt  data_imutest_sim_acc_y.txt  data_imutest_sim_acc_z.txt  data_imutest_sim_gyr_x.txt  data_imutest_sim_gyr_y.txt  data_imutest_sim_gyr_z.txt  imutest_imu_param.yaml
week2/src/imu_utils/launch/: imu.launch
week2/src/imu_utils/scripts/: draw_allan.m
week2/vio_data_simulation/: CMakeLists.txt
week2/vio_data_simulation/python_tool/: draw_trajcory.py
week2/vio_data_simulation/src/: imu.cpp
week3/: README.md
week3/CurveFitting_LM/: CMakeLists.txt
week3/CurveFitting_LM/app/: CurveFitting.cpp
week3/CurveFitting_LM/backend/: problem.cc
week4/: README.md
week4/nullspace_test/: hessian_nullspace_test.cpp
week5/: README.md
week5/hw_course5/: CMakeLists.txt
week5/hw_course5/app/: TestMonoBA.cpp
week5/hw_course5/backend/: problem.cc
